# bmc_crypt_lib

./: .gitignore  CMakeLists.txt  README.md
cmake/: CheckAlloca.cmake  CheckAtomicOps.cmake  CheckInline.cmake  CheckMemoryFences.cmake  CheckRDRAND.cmake  CheckRandomFunctions.cmake  CheckStdCLimits.cmake  CheckSystemFunctions.cmake  CheckType128.cmake  CheckWeakSymbols.cmake  TestEndian.cmake  bmc_cryptConfig.cmake.in
demo/: CMakeLists.txt  alice_bob.c
include/bmc_crypt/: core.h  crypto_bmc_protocol.h  crypto_core_aes.h  crypto_core_ed25519.h  crypto_hash_sha256.h  crypto_hash_sha512.h  crypto_hkdf_256.h  crypto_hmacsha256.h  crypto_hmacsha512.h  crypto_scalarmult_curve25519.h  crypto_scalarmult_ed25519.h  crypto_sign.h  crypto_verify_16.h  crypto_verify_32.h  crypto_verify_64.h  export.h  randombytes.h  randombytes_internal_random.h  randombytes_sysrandom.h  runtime.h  utils.h
include/bmc_crypt/private/: aes_internal.h  ed25519_ref10_fe_25_5.h  ed25519_ref10_fe_51.h  implementations.h  modes.h  mutex.h
src/: core.c  crypto_bmc_protocol.c  runtime.c  utils.c  verify.c
src/aes/: aes_cbc.c  aes_context.c  aes_core.c  aes_ctr.c  aes_ecb.c  aes_gcm.c  utils.c
src/curve_25519/curve25519/: scalarmult_curve25519.c  scalarmult_curve25519.h
src/curve_25519/curve25519/ref10/: x25519_ref10.c  x25519_ref10.h
src/curve_25519/ed25519/: core_ed25519.c
src/curve_25519/ed25519/ref10/: ed25519_ref10.c  scalarmult_ed25519_ref10.c
src/curve_25519/sign/: keypair.c  sign.c  sign_ed25519_ref10.h  verify.c
src/hash/: hash_sha256.c  hash_sha512.c
src/hkdf/: hkdf_256.c
src/hmac/: hmacsha256.c  hmacsha512.c
src/modes/: cbc_128.c  ctr_128.c  gcm_128.c
src/randombytes/: randombytes.c
src/randombytes/internal/: randombytes_internal_random.c
src/randombytes/sysrandom/: randombytes_sysrandom.c
test/: CMakeLists.txt  test_aes_context.c  test_aes_ctr_ietf.c  test_bmc_protocol.c  test_cbc.c  test_ctr.c  test_ecb.c  test_ecdh.c  test_ecdsa.c  test_gcm.c  test_hash.c  test_hkdf.c  test_random.c  test_random_advanced.c
